--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
@@ -24,9 +25,12 @@
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
+    "sonner": "^2.0.7",
+    "streamsaver": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
     "uuid": "^11.1.0",
+    "yup": "^1.7.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -34,6 +38,7 @@
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/streamsaver": "^2.0.5",
     "@vitejs/plugin-react-swc": "^4.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
